# WebSite

./: CMakeLists.txt  README.md  README_ROLE_SYSTEM.md  database_role_init.sql  init_role_system.sh  main.cpp
backEnd/: ConnectProc.cpp  MySQLProc.cpp  business.cpp  logIn.cpp  signUp.cpp  模块设计.md
backEnd/include/: ConnectProc.h  MySQLProc.h  business.h  logIn.h  signUp.h
lib/: LogM.h  LogM.lib
web/: admin.html  index.html  load.sh  main.html
web/battle/: main.html  script.js  style.css
web/catKingdom/: game.css  game.html  game.js  style.css
